# elanroth.github.io

./: .env.local.example  .firebaserc  .gitignore  .markdownlint.json  Ideas.md  PROJECT_STRUCTURE.md  README.md  database.rules.json  eurotrip.html  firebase.json  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.js  vite.strategy-lab.config.js
.github/workflows/: deploy.yml
assets/: index-BSRAvmp8.js  index-Ce6AB62n.css  index-DREWRM5S.js  index-DijpqYss.js  index-Dky7BKUl.js  index-Dr02HCUM.css  index-Duh2M4u1.css  index-mD5Il-DJ.css  index.esm-8cWDn0J_.js  index.esm-DkJZADi_.js
budget/: index.html
budget/assets/: Fidelity 02_26-C7Evusso.js  Freedom 02_26-D2MpRGKd.js  (+8 more)
public/: Content.md  DRP Game Theory.pptx  eurotrip.html
research/banagrams_strategy_lab/: README.md  pyproject.toml
research/banagrams_strategy_lab/banagrams_strategy_lab/: __init__.py  __main__.py  board.py  cli.py  data.py  distribution.py  environment.py  ga.py  paths.py  policy.py  reporting.py  snapshots.py
research/banagrams_strategy_lab/tests/: helpers.py  test_board.py  test_data.py  test_environment.py  test_ga.py  test_reporting.py  test_snapshots.py
scripts/: anagrams-play.ts  banagrams_strategy_lab.py  wordswords-build-zipf.py  wordswords-build-zipf.ts  wordswords-precompute-analysis.ts
src/: App.css  App.jsx  App.tsx  LetterTrail.tsx  env.d.ts  index.css  main.tsx
strategy-lab/: StrategyLabApp.tsx  index.html  main.tsx  runApiPlugin.js  sampleSimulation.ts
wordswords/: analysis-n2.json  analysis-progress.json  zipf.tsv
(+117 files in other folders)
